# image-resolution-is-even

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  test.yml
src/image_resolution_is_even/: __init__.py  __main__.py
src/tests/: test_all.py
